--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^4.16.2",
     "bcryptjs": "^3.0.3",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "prisma": "^4.16.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
